compiler/testData/diagnostics/tests/labels/unknownLabel.diag.txt
/unknownLabel.kt:8:32: error: unresolved reference: @foo
    1.bar { if (it == 2) return@foo }
                               ^^^^
/unknownLabel.kt:12:40: error: unresolved reference: @foo
    1.bar { 2.bar { if (it == 2) return@foo } }
                                       ^^^^

